--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".BestRankPets"
+            android:parentActivityName=".PetRank"></activity>
+        <activity android:name=".ContactActivity"
+            android:parentActivityName=".PetRank"/>
+        <activity android:name=".AboutActivity"
+            android:parentActivityName=".PetRank"/>
+        <activity android:name=".MainActivity"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,8 +26,7 @@
         </activity>
         <activity
             android:name=".PetRank"
-            android:parentActivityName=".MainActivity"/>
-
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
